tests/yield/yield.exp
Error ------------------------------------------------ yield_arrow_error.js:2:25

Error: yield_arrow_error.js:2
  2:   var e = () => { yield 1; };
                             ^ Unexpected number

Error ----------------------------------------------- yield_arrow_error2.js:2:23

Error: yield_arrow_error2.js:2
  2:   var e = () => yield 1;
                           ^ Unexpected number


Found 2 errors
